// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error should render 1`] = `
.c0 {
  padding: 0.5em;
  border: 2px dashed #b5c4cb;
  text-align: left;
  color: #5F7682;
  font-size: 1em;
  font-weight: bold;
  margin-bottom: 1em;
}

<div
  className="c0"
/>
`;

exports[`Error should render as large 1`] = `
.c0 {
  padding: 0.5em;
  border: 2px dashed #b5c4cb;
  text-align: left;
  color: #5F7682;
  font-size: 1em;
  font-weight: bold;
  margin-bottom: 1em;
  padding: 2em 1em;
}

<div
  className="c0"
/>
`;

exports[`Error should render as small 1`] = `
.c0 {
  padding: 0.5em;
  border: 2px dashed #b5c4cb;
  text-align: left;
  color: #5F7682;
  font-size: 1em;
  font-weight: bold;
  margin-bottom: 1em;
  padding: 0.2em 0.5em;
  margin: 0;
  display: inline-block;
}

<div
  className="c0"
/>
`;

exports[`Error should render with no margin 1`] = `
.c0 {
  padding: 0.5em;
  border: 2px dashed #b5c4cb;
  text-align: left;
  color: #5F7682;
  font-size: 1em;
  font-weight: bold;
  margin-bottom: 0;
}

<div
  className="c0"
/>
`;
